scripts/nullness/annotator/url49526af437_Maria_G_CS325_tgz-pJ8-assignments_farmer_FarmerImplJ8.txt
../annotator/url49526af437_Maria_G_CS325_tgz-pJ8-assignments_farmer_FarmerImplJ8/src/assignments/farmer/FarmerImpl.java:6: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url49526af437_Maria_G_CS325_tgz-pJ8-assignments_farmer_FarmerImplJ8/src/assignments/farmer/FarmerImpl.java:47: error: cannot find symbol
	@Initializer public void setStrategies(PlowStrategy plowStrategy, PlantStrategy plantStrategy, WeedControlStrategy weedControlStrategy, HarvestStrategy harvestStrategy, MarketStrategy marketStrategy){
	 ^
  symbol:   class Initializer
  location: class FarmerImpl
2 errors
